Fixed bug on add to profile when name of charity had ' character.

--- a/views/charities-organizations-show.handlebars
+++ b/views/charities-organizations-show.handlebars
@@ -65,7 +65,7 @@
                                 </div>
                             </div>
                             {{#if session.userId}}
-                                <button id="addToProfileBtn" class="btn btn-outline-success mt-auto" type="button" onclick="addToProfile('{{session.userId}}', '{{organization.charityName}}');">Add to Profile</button>
+                                <button id="addToProfileBtn" class="btn btn-outline-success mt-auto" type="button" onclick="addToProfile();">Add to Profile</button>
                             {{/if}}
                         </div>
                     </div>
